Hid pentest on mobile due to issues

--- a/public/css/styletw.css
+++ b/public/css/styletw.css
@@ -1461,6 +1461,10 @@ select {
     display: block;
   }
 
+  .sm\:hidden {
+    display: none;
+  }
+
   .sm\:h-9 {
     height: 2.25rem;
   }
